--- a/Client_socket/Client_socket.vcxproj
+++ b/Client_socket/Client_socket.vcxproj
@@ -153,6 +153,10 @@
   <ItemGroup>
     <ClCompile Include="client.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EasyTcyClient.hpp" />
+    <ClInclude Include="Message.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
