--- a/Server_socket/Server_socket.vcxproj.filters
+++ b/Server_socket/Server_socket.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Message.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLTimestamp.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
