--- a/Server_socket/Server_socket.vcxproj
+++ b/Server_socket/Server_socket.vcxproj
@@ -89,6 +89,8 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)../bin/$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)../tmp/$(Platform)\$(Configuration)\</IntDir>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
