--- a/Server_socket/Server_socket.vcxproj
+++ b/Server_socket/Server_socket.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTask.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
     <ClInclude Include="Message.hpp" />
