--- a/Server_socket/Server_socket.vcxproj.filters
+++ b/Server_socket/Server_socket.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="CELLTimestamp.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLTask.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
