--- a/Memory/Memory.vcxproj.filters
+++ b/Memory/Memory.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="MemoryMgr.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLTimestamp.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
